--- a/main.html
+++ b/main.html
@@ -1,16 +1,35 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+   
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <img src="https://www.istockphoto.com/photo/half-length-portrait-of-positive-brunette-student-looking-at-camera-and-having-fun-gm897993974-247760505" height="100" weight="100px" alt="himanshi pic">
+    <h1>Your Name</h1>
+    
+    <p>Connect with me on <a href="https://www.linkedin.com/in/your-profile" target="_blank">LinkedIn</a></p>
 
+    <section id="skills">
+        <h2>Skills</h2>
+        <p>
+            - Skill 1<br>
+            - Skill 2<br>
+            - Skill 3<br>
+            <!-- Add more skills as needed -->
+        </p>
+    </section>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <ul>
+            <li>Project 1 - Description of Project 1</li>
+            <li>Project 2 - Description of Project 2</li>
+            <li>Project 3 - Description of Project 3</li>
+            <!-- Add more projects as needed -->
+        </ul>
+    </section>
 </body>
-
 </html>
